--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "env-cmd mocha"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/EvanMad/node-edulink#readme",
   "dependencies": {
+    "env-cmd": "^10.1.0",
     "xmlhttprequest": "^1.8.0"
   }
 }
